syntax = "proto3";

package PROTO;

message InnerMessage {
  uint32 number = 1;
  string text = 2;
}